added navbar to all pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
                 
                 <li class = "navbar__item">
-                    <a href="/" class="navbar__links">How It Works</a>
+                    <a href="description.html" class="navbar__links">How It Works</a>
                 </li>
             </ul>
         </div>
@@ -57,18 +57,20 @@
 
 
 
-
+<!-- possible footer??? -->
     <div class="footer__container">
         <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
+                    <!-- 
                     <h2>About Us</h2>
                     <a href="/">How it works</a>
+                    -->
                 </div>
             </div>
     </div>
 
 
-    
+
 </body>
 </html>
