--- a/customization.html
+++ b/customization.html
@@ -9,8 +9,43 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" 
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b1a74ee1f1.js" 
+        crossorigin="anonymous"></script>
 </head>
 <body>
+
+
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="index.html" id="navbar__logo"> 
+                <i class="fas fa-ruler-combined"></i> Beam
+            </a>
+
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
+            <ul class="navbar__menu">
+
+                <li class="navbar__item">
+                    <a href="index.html" class="navbar__links">Home</a>
+                </li>
+
+                <li class="navbar__item">
+                    <a href="customization.html" class="navbar__links">Customizer</a>
+                </li>
+                
+                <li class = "navbar__item">
+                    <a href="description.html" class="navbar__links">How It Works</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
+
     
     <div class="options">
         <div class="options__container">
