added some basic structure for steps 1-3

--- a/description.html
+++ b/description.html
@@ -43,6 +43,35 @@
         </div>
     </nav>
 
+    <br>
+    <h2> Step One: </h2>
+    <br>
+
+    <p> The first step is to input the span, location, and purpose of your beam. As well as the diameter of the rebarb bars and the stirrups.
+    </p>
+    <br>
+    
+    <img src = "step1.jpg" alt = "Beam Customizer selection page" style="width:500px;height:250px;border:#000000 6px outset">
+    <br>
+    <br>
+    <h2> Step Two: </h2>
+    <br>
+    <p> Once span is known we can calculate the width and overall depth of the beam using an L/D ratio of 16 and an aspect ratio of 1.5.  </p>
+    <br>
+    <h2> Step Three: </h2>
+    <br>
+    <p> Using the location and purpose of your beam we can then determine the exposure classification of your beam using the following table. </p>
+    <br>
+
+    <img src = "step3.jpg" alt = "Exposure classification table" style="width:500px;height:250px;border:#000000 6px outset">
+    <br>
+    <br>
+
+    <p> We can then figure out the minimum cover of your beam using this classification and the following table. </p>
+    <br>
+    <img src = "step32.jpg" alt = "Exposure classification table" style="width:500px;height:250px;border:#000000 6px outset">
+    <br>
+
 
 </body>
 </html>
