js update and file sort

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beam Simulation</title>
-    <link rel="stylesheet" href="main__styles.css" />
+    <link rel="stylesheet" href="/css/index__styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" 
@@ -34,11 +34,11 @@
                 </li>
 
                 <li class="navbar__item">
-                    <a href="customization.html" class="navbar__links">Customizer</a>
+                    <a href="/html/customization.html" class="navbar__links">Customizer</a>
                 </li>
                 
                 <li class = "navbar__item">
-                    <a href="description.html" class="navbar__links">How It Works</a>
+                    <a href="/html/description.html" class="navbar__links">How It Works</a>
                 </li>
             </ul>
         </div>
@@ -50,7 +50,7 @@
         <div class="main__container">
             <div class="main__content">
                 <h1>Beam Simulation</h1>
-                <a href="/customization.html" class="button">Start</a>
+                <a href="/html/customization.html" class="button">Start</a>
             </div>
         </div>
     </div>
