--- a/html/description.html
+++ b/html/description.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How it Works</title>
-    <link rel="stylesheet" href="description__styles.css" />
+    <link rel="stylesheet" href="/css/description__styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" 
@@ -16,7 +16,7 @@
     
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="index.html" id="navbar__logo"> 
+            <a href="/index.html" id="navbar__logo"> 
                 <i class="fas fa-ruler-combined"></i> Beam
             </a>
 
@@ -29,15 +29,15 @@
             <ul class="navbar__menu">
 
                 <li class="navbar__item">
-                    <a href="index.html" class="navbar__links">Home</a>
+                    <a href="/ index.html" class="navbar__links">Home</a>
                 </li>
 
                 <li class="navbar__item">
-                    <a href="customization.html" class="navbar__links">Customizer</a>
+                    <a href="/html/customization.html" class="navbar__links">Customizer</a>
                 </li>
                 
                 <li class = "navbar__item">
-                    <a href="description.html" class="navbar__links">How It Works</a>
+                    <a href="/html/description.html" class="navbar__links">How It Works</a>
                 </li>
             </ul>
         </div>
