--- a/html/description.html
+++ b/html/description.html
@@ -43,35 +43,42 @@
         </div>
     </nav>
 
-    <br>
-    <h2> Step One: </h2>
+<br>
+    <h3> &nbsp&nbsp&nbsp Step One: </h3>
     <br>
 
-    <p> The first step is to input the span, location, and purpose of your beam. As well as the diameter of the rebarb bars and the stirrups.
+    <p> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp The first step is to input the span, location, and purpose of your beam. As well as the diameter of the rebarb bars and the stirrups.
     </p>
     <br>
-    
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <img src = "step1.jpg" alt = "Beam Customizer selection page" style="width:500px;height:250px;border:#000000 6px outset">
+<br>
+<br>
+    <h3> &nbsp&nbsp&nbsp Step Two: </h3>
     <br>
-    <br>
-    <h2> Step Two: </h2>
-    <br>
-    <p> Once span is known we can calculate the width and overall depth of the beam using an L/D ratio of 16 and an aspect ratio of 1.5.  </p>
-    <br>
-    <h2> Step Three: </h2>
-    <br>
-    <p> Using the location and purpose of your beam we can then determine the exposure classification of your beam using the following table. </p>
-    <br>
+<p> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Once span is known we can calculate the width and overall depth of the beam using an L/D ratio of 16 and an aspect ratio of 1.5.  </p>
+<br>
+<h3> &nbsp&nbsp&nbsp Step Three: </h3>
+<br>
+<p> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Using the location and purpose of your beam we can then determine the exposure classification of your beam using the following table. </p>
+<br>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<img src = "step3.jpg" alt = "Exposure classification table" style="width:500px;height:250px;border:#000000 6px outset">
+<br>
+<br>
 
-    <img src = "step3.jpg" alt = "Exposure classification table" style="width:500px;height:250px;border:#000000 6px outset">
-    <br>
-    <br>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp We can then figure out the minimum cover of your beam using this classification and the following table. </p>
+<br>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<img src = "step32.jpg" alt = "Exposure classification table" style="width:500px;height:250px;border:#000000 6px outset">
+<br>
 
-    <p> We can then figure out the minimum cover of your beam using this classification and the following table. </p>
-    <br>
-    <img src = "step32.jpg" alt = "Exposure classification table" style="width:500px;height:250px;border:#000000 6px outset">
-    <br>
+<br>
 
+<h3> &nbsp&nbsp&nbsp Step Four: </h3>
+
+<p> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </p>
 
 </body>
+
 </html>
