--- a/old_index.html
+++ b/old_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beam Simulation</title>
-    <link rel="stylesheet" href="results__styles.css" />
+    <link rel="stylesheet" href="/css/index__styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" 
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/b1a74ee1f1.js" 
         crossorigin="anonymous"></script>
 </head>
+
 <body>
     
     <nav class="navbar">
@@ -25,27 +26,36 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-
-            <ul class="navbar__menu">
-
-                <li class="navbar__item">
-                    <a href="index.html" class="navbar__links">Home</a>
-                </li>
-
-                <li class="navbar__item">
-                    <a href="customization.html" class="navbar__links">Customizer</a>
-                </li>
-                
-                <li class = "navbar__item">
-                    <a href="description.html" class="navbar__links">How It Works</a>
-                </li>
-            </ul>
         </div>
     </nav>
 
 
 
-    <canvas id="drawingCanvas" width="500" height="500"></canvas>
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>Beam Simulation</h1>
+                <a href="/html/customization.html" class="button">Start</a>
+            </div>
+        </div>
+    </div>
+
+
+
+<!-- possible footer??? -->
+    <div class="footer__container">
+        <div class="footer__links">
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <!-- 
+                    <h2>About Us</h2>
+                    <a href="/">How it works</a>
+                    -->
+                </div>
+            </div>
+    </div>
+
+
 
 </body>
 </html>
