github pages and simplification of redirecting pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beam Customizer</title>
-    <link rel="stylesheet" href="/customize__styles.css" />
-    <link rel="javascript" href="/customize__script.js" />
+    <link rel="stylesheet" href="customize__styles.css" />
+    <link rel="javascript" href="customize__script.js" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" 
@@ -20,7 +20,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/index.html" id="navbar__logo"> 
+            <a href="index.html" id="navbar__logo"> 
                 <i class="fas fa-ruler-combined"></i> Beam
             </a>
 
@@ -178,7 +178,7 @@
             </div>
         </div>
     </div>
-    <script src="/customize_script.js"></script>
+    <script src="customize_script.js"></script>
 
 </body>
 </html>
