--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beam Customizer</title>
-    <link rel="stylesheet" href="customize__styles.css" />
-    <link rel="javascript" href="customize__script.js" />
+    <link rel="stylesheet" href="index__styles.css" />
+    <link rel="javascript" href="index__script.js" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" 
