change script source

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a>
         </div>
     </nav>
-    
+
     
     <div class="options">
         <div class="options__container">
@@ -162,6 +162,6 @@
             </div>
         </div>
     </div>
-    <script src="customize_script.js"></script>
+    <script src="index__script.js"></script>
 </body>
 </html>
